unpackaged/main/default/objects/Business_Unit__c/Business_Unit__c.object-meta.xml
<CustomObject>
    <description>For rolling up Opps mapping to distinct agreements but within the same Account.</description>
    <label>Business Unit</label>
    <nameField>
        <label>Business Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>