unpackaged/main/default/objects/Business_Unit__c/fields/Additional_Usage_Paused__c.field-meta.xml
<CustomField>
    <fullName>Additional_Usage_Paused__c</fullName>
    <formula>TODAY()&lt;= Pause_Additional_Usage_Until_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Usage Paused?</label>
    <type>Checkbox</type>
</CustomField>