unpackaged/main/default/objects/Business_Unit__c/fields/Age_mo__c.field-meta.xml
<CustomField>
    <fullName>Age_mo__c</fullName>
    <formula>IF(
  Business_Line__c = &#39;Committed&#39;,
  IF(
    BU_Status__c = &#39;Active&#39;,
    ((YEAR(TODAY()) - YEAR(Committed_Booking_Start_Date__c))*12) + (MONTH(TODAY()) - MONTH(Committed_Booking_Start_Date__c)),
    ((YEAR(Most_Recent_Base_Opportunity__r.Booking_Date__c) - YEAR(Committed_Booking_Start_Date__c))*12) + (MONTH(Most_Recent_Base_Opportunity__r.Booking_Date__c) - MONTH(Committed_Booking_Start_Date__c))
  ),
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age (mo)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>