unpackaged/main/default/objects/Business_Unit__c/fields/Annualized_Amount__c.field-meta.xml
<CustomField>
    <fullName>Annualized_Amount__c</fullName>
    <description>The annualized amount of Opportunities rolling to this BU, giving preference to ARR. If ARR is 0 or blank, uses MRR*12. Otherwise shows the ARR. Used in Roll-ups to the corresponding Business Unit record.</description>
    <formula>(MRR__c *12) + ARR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For Annual deals only: the full, annualized amount of active revenue for this Customer&#39;s agreement.</inlineHelpText>
    <label>Annualized Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>