unpackaged/main/default/objects/Business_Unit__c/fields/ARR_Workflows__c.field-meta.xml
<CustomField>
    <fullName>ARR_Workflows__c</fullName>
    <label>ARR: Workflows</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>