unpackaged/main/default/objects/Business_Unit__c/fields/Automatic_Bookings_Method__c.field-meta.xml
<CustomField>
    <fullName>Automatic_Bookings_Method__c</fullName>
    <label>zOLD Automatic Bookings Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing Script</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>