unpackaged/main/default/objects/Business_Unit__c/fields/Automation_Error__c.field-meta.xml
<CustomField>
    <fullName>Automation_Error__c</fullName>
    <label>Automation Error</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>