unpackaged/main/default/objects/Business_Unit__c/fields/Billable_Unit_Types__c.field-meta.xml
<CustomField>
    <fullName>Billable_Unit_Types__c</fullName>
    <label>Billable Unit Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit_Types</valueSetName>
    </valueSet>
</CustomField>