unpackaged/main/default/objects/Business_Unit__c/fields/Billing_Address_Complete__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Complete__c</fullName>
    <formula>NOT(ISBLANK(Billing_Street_Line_1__c)) &amp;&amp;
NOT(ISBLANK(Billing_City__c)) &amp;&amp;
NOT(ISBLANK(Billing_State__c)) &amp;&amp;
NOT(ISBLANK(Billing_Postal_Code__c)) &amp;&amp;
NOT(ISBLANK(Billing_Country__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Address Complete?</label>
    <type>Checkbox</type>
</CustomField>