unpackaged/main/default/objects/Business_Unit__c/fields/Billing_Address_Status__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Status__c</fullName>
    <label>Billing Address Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not checked</fullName>
            </value>
            <value>
                <fullName>Not matched</fullName>
            </value>
            <value>
                <fullName>Parsed but not found</fullName>
            </value>
            <value>
                <fullName>Ambiguous</fullName>
            </value>
            <value>
                <fullName>Corrected</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>