unpackaged/main/default/objects/Business_Unit__c/fields/Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country__c</fullName>
    <label>Billing Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>