unpackaged/main/default/objects/Business_Unit__c/fields/Billing_Country_Definition__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Country Definition</label>
    <referenceTo>pw_ccpro__CountryObject__c</referenceTo>
    <relationshipLabel>Business Units</relationshipLabel>
    <relationshipName>Business_Units</relationshipName>
    <type>Lookup</type>
</CustomField>