unpackaged/main/default/objects/Business_Unit__c/fields/Billing_County__c.field-meta.xml
<CustomField>
    <fullName>Billing_County__c</fullName>
    <label>Billing County</label>
    <type>TextArea</type>
</CustomField>