unpackaged/main/default/objects/Business_Unit__c/fields/Billing_Intermediate_Region__c.field-meta.xml
<CustomField>
    <fullName>Billing_Intermediate_Region__c</fullName>
    <label>Billing Intermediate Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Geo_Intermediate_Region</valueSetName>
    </valueSet>
</CustomField>