unpackaged/main/default/objects/Business_Unit__c/fields/Billing_Location_Accuracy__c.field-meta.xml
<CustomField>
    <fullName>Billing_Location_Accuracy__c</fullName>
    <label>Billing Location Accuracy</label>
    <type>TextArea</type>
</CustomField>