unpackaged/main/default/objects/Business_Unit__c/fields/Billing_Location_Source__c.field-meta.xml
<CustomField>
    <fullName>Billing_Location_Source__c</fullName>
    <label>Billing Location Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>