unpackaged/main/default/objects/Business_Unit__c/fields/Billing_Region__c.field-meta.xml
<CustomField>
    <fullName>Billing_Region__c</fullName>
    <label>Billing Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Geo_Region</valueSetName>
    </valueSet>
</CustomField>