unpackaged/main/default/objects/Business_Unit__c/fields/Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Billing_State__c</fullName>
    <label>Billing State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>