unpackaged/main/default/objects/Business_Unit__c/fields/Billing_Street_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street_Line_1__c</fullName>
    <label>Billing Street (Line 1)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>