unpackaged/main/default/objects/Business_Unit__c/fields/Billing_Subregion__c.field-meta.xml
<CustomField>
    <fullName>Billing_Subregion__c</fullName>
    <label>Billing Subregion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Geo_Subregion</valueSetName>
    </valueSet>
</CustomField>