unpackaged/main/default/objects/Business_Unit__c/fields/BU_Status__c.field-meta.xml
<CustomField>
    <fullName>BU_Status__c</fullName>
    <formula>CASE(Subscription_Typ__c,
 &quot;Self Service&quot;,IF(MRR__c &gt; 0,&quot;Active&quot;,&quot;Churned&quot;),
 IF(
  Most_Recent_Base_Opportunity__r.IsLost__c || (Most_Recent_Base_Opportunity__r.Debooked_deal__c &amp;&amp; Annualized_Amount__c = 0 ),
  &quot;Churned&quot;,
  &quot;Active&quot;
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>