unpackaged/main/default/objects/Business_Unit__c/fields/Business_Line__c.field-meta.xml
<CustomField>
    <fullName>Business_Line__c</fullName>
    <formula>IF(
ISBLANK(Most_Recent_Base_Opportunity__c),
&quot;Self Service&quot;,
Most_Recent_Base_Opportunity__r.Business_Line__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Line</label>
    <type>Text</type>
</CustomField>