unpackaged/main/default/objects/Business_Unit__c/fields/Committed_Booking_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Committed_Booking_Start_Date__c</fullName>
    <formula>Originating_Opportunity__r.Booking_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Equal to the Booking Date of the first opportunity in the opportunity chain (i.e., the Originating Opportunity).</inlineHelpText>
    <label>Committed Booking Start Date</label>
    <type>Date</type>
</CustomField>