unpackaged/main/default/objects/Business_Unit__c/fields/Current_Apps__c.field-meta.xml
<CustomField>
    <fullName>Current_Apps__c</fullName>
    <label>Current Apps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>