unpackaged/main/default/objects/Business_Unit__c/fields/Current_MAU_End_Users__c.field-meta.xml
<CustomField>
    <fullName>Current_MAU_End_Users__c</fullName>
    <label>Current MAU (End Users)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>