unpackaged/main/default/objects/Business_Unit__c/fields/Current_MAU_Mobile_only__c.field-meta.xml
<CustomField>
    <fullName>Current_MAU_Mobile_only__c</fullName>
    <label>Current MAU (Mobile-only)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>