unpackaged/main/default/objects/Business_Unit__c/fields/Current_Term_Number__c.field-meta.xml
<CustomField>
    <fullName>Current_Term_Number__c</fullName>
    <formula>IF(BU_Status__c = &quot;Active&quot;, Most_Recent_Base_Opportunity__r.Term_Number__c,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Term Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>