unpackaged/main/default/objects/Business_Unit__c/fields/Current_Workflow_Runs__c.field-meta.xml
<CustomField>
    <fullName>Current_Workflow_Runs__c</fullName>
    <label>Current Workflow Runs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>