unpackaged/main/default/objects/Business_Unit__c/fields/Custom_Usage_Billing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Custom_Usage_Billing_Notes__c</fullName>
    <label>Custom Usage: Billing Notes</label>
    <type>TextArea</type>
</CustomField>