unpackaged/main/default/objects/Business_Unit__c/fields/Has_Defined_Champion__c.field-meta.xml
<CustomField>
    <fullName>Has_Defined_Champion__c</fullName>
    <formula>Num_Champions__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Defined Champion?</label>
    <type>Checkbox</type>
</CustomField>