unpackaged/main/default/objects/Business_Unit__c/fields/Implementation__c.field-meta.xml
<CustomField>
    <fullName>Implementation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Implementation</label>
    <referenceTo>Implementation__c</referenceTo>
    <relationshipLabel>Business Units</relationshipLabel>
    <relationshipName>Business_Units</relationshipName>
    <type>Lookup</type>
</CustomField>