unpackaged/main/default/objects/Business_Unit__c/fields/Internal_User_Domain_List__c.field-meta.xml
<CustomField>
    <fullName>Internal_User_Domain_List__c</fullName>
    <label>Internal User Domain List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>