unpackaged/main/default/objects/Business_Unit__c/fields/Is_Uploaded_to_Netsuite__c.field-meta.xml
<CustomField>
    <fullName>Is_Uploaded_to_Netsuite__c</fullName>
    <formula>IF(ISBLANK(Uploaded_to_Netsuite_At__c),FALSE,TRUE)</formula>
    <label>Is Uploaded to Netsuite?</label>
    <type>Checkbox</type>
</CustomField>