unpackaged/main/default/objects/Business_Unit__c/fields/Last_Onsite_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Onsite_Date__c</fullName>
    <label>Last Onsite Date</label>
    <type>Date</type>
</CustomField>