unpackaged/main/default/objects/Business_Unit__c/fields/Most_Recent_Base_Contract__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Base_Contract__c</fullName>
    <label>Most Recent Base Contract</label>
    <type>Url</type>
</CustomField>