unpackaged/main/default/objects/Business_Unit__c/fields/Most_Recent_Base_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Base_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Most Recent Base Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Business Units (Most Recent Base Opportunity)</relationshipLabel>
    <relationshipName>Business_Units1</relationshipName>
    <type>Lookup</type>
</CustomField>