unpackaged/main/default/objects/Business_Unit__c/fields/NetSuite_Company__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NetSuite Company</label>
    <referenceTo>breadwinner_ns__BW_Company__c</referenceTo>
    <relationshipLabel>Business Units</relationshipLabel>
    <relationshipName>Business_Units</relationshipName>
    <type>Lookup</type>
</CustomField>