unpackaged/main/default/objects/Business_Unit__c/fields/Num_Business_Cloud_Retool_Orgs__c.field-meta.xml
<CustomField>
    <fullName>Num_Business_Cloud_Retool_Orgs__c</fullName>
    <label># Business Cloud Retool Orgs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>