unpackaged/main/default/objects/Business_Unit__c/fields/Num_Economic_Buyers__c.field-meta.xml
<CustomField>
    <fullName>Num_Economic_Buyers__c</fullName>
    <label># Economic Buyers</label>
    <summaryFilterItems>
        <field>Business_Unit_Contact_Role__c.Role__c</field>
        <operation>equals</operation>
        <value>Economic Buyer</value>
    </summaryFilterItems>
    <summaryForeignKey>Business_Unit_Contact_Role__c.Business_Unit__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>