unpackaged/main/default/objects/Business_Unit__c/fields/Num_of_Pricing_Schedules__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Pricing_Schedules__c</fullName>
    <label># of Pricing Schedules</label>
    <summaryForeignKey>BU_Pricing_Schedule__c.Business_Unit__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>