unpackaged/main/default/objects/Business_Unit__c/fields/Num_Retool_Self_Hosted_Orgs__c.field-meta.xml
<CustomField>
    <fullName>Num_Retool_Self_Hosted_Orgs__c</fullName>
    <label># Retool Self Hosted Orgs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>