unpackaged/main/default/objects/Business_Unit__c/fields/Open_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Open_Renewal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Open Renewal</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Opportunity not related to this BU</errorMessage>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <valueField>Opportunity.Business_Unit__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Business Units (Open Renewal)</relationshipLabel>
    <relationshipName>Business_Units2</relationshipName>
    <type>Lookup</type>
</CustomField>