unpackaged/main/default/objects/Business_Unit__c/fields/Ops_Tag__c.field-meta.xml
<CustomField>
    <fullName>Ops_Tag__c</fullName>
    <label>Ops Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>