unpackaged/main/default/objects/Business_Unit__c/fields/Originating_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Originating_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Original Opportunity that generated this BU record. Updated via Process Builder. Used to stamp back to the Opportunity that triggers creation of this BU.

https://paper.dropbox.com/doc/New-Salesforce-Fields-Opportunities-Business-Units-Accounts--Ay1q1~SCRlqq2EmE9wVHvqBrAQ-PkyPecvObh7GLmPeED6TB

https://paper.dropbox.com/doc/How-to-Use-the-Opportunity-Fields-April-2020--Ay52tLsUoyROBPXqkP99eIafAQ-Wy8AxHfGwiplwNW20Jhl3</description>
    <label>Originating Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Business Units</relationshipLabel>
    <relationshipName>Business_Units</relationshipName>
    <type>Lookup</type>
</CustomField>