unpackaged/main/default/objects/Business_Unit__c/fields/Pause_Additional_Usage_Until_Date__c.field-meta.xml
<CustomField>
    <fullName>Pause_Additional_Usage_Until_Date__c</fullName>
    <label>Pause Additional Usage Until Date</label>
    <type>Date</type>
</CustomField>