unpackaged/main/default/objects/Business_Unit__c/fields/Pause_Automatic_Bookings_On__c.field-meta.xml
<CustomField>
    <fullName>Pause_Automatic_Bookings_On__c</fullName>
    <label>zOLD Pause Automatic Bookings On</label>
    <type>Date</type>
</CustomField>