unpackaged/main/default/objects/Business_Unit__c/fields/Platform_Seats_Unlimited__c.field-meta.xml
<CustomField>
    <fullName>Platform_Seats_Unlimited__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A flag to track customers who have unlimited platform seats on their license. Helpful to track adoption.</description>
    <inlineHelpText>A flag to track customers who have unlimited platform seats on their license. Helpful to track adoption.</inlineHelpText>
    <label>Platform Seats Unlimited?</label>
    <type>Checkbox</type>
</CustomField>