unpackaged/main/default/objects/Business_Unit__c/fields/Platform_Type__c.field-meta.xml
<CustomField>
    <fullName>Platform_Type__c</fullName>
    <description>The platform on which the client is deploying Retool&#39;s services. Updated automatically based on the Opportunity that generates this BU.

https://paper.dropbox.com/doc/New-Salesforce-Fields-Opportunities-Business-Units-Accounts--Ay1q1~SCRlqq2EmE9wVHvqBrAQ-PkyPecvObh7GLmPeED6TB

https://paper.dropbox.com/doc/How-to-Use-the-Opportunity-Fields-April-2020--Ay52tLsUoyROBPXqkP99eIafAQ-Wy8AxHfGwiplwNW20Jhl3</description>
    <label>Platform Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Platform_Type</valueSetName>
    </valueSet>
</CustomField>