unpackaged/main/default/objects/Business_Unit__c/fields/Purchase_Order_Details__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Details__c</fullName>
    <label>Purchase Order Details</label>
    <type>TextArea</type>
</CustomField>