unpackaged/main/default/objects/Business_Unit__c/fields/Purchase_Order_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Disposition__c</fullName>
    <defaultValue>&quot;Not Required&quot;</defaultValue>
    <label>Purchase Order Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>