unpackaged/main/default/objects/Business_Unit__c/fields/Solution_Set__c.field-meta.xml
<CustomField>
    <fullName>Solution_Set__c</fullName>
    <label>Solution Set</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Tags</valueSetName>
    </valueSet>
</CustomField>