unpackaged/main/default/objects/Business_Unit__c/fields/Stripe_Customer__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stripe Customer</label>
    <referenceTo>Stripe_Customer__c</referenceTo>
    <relationshipLabel>Business Units</relationshipLabel>
    <relationshipName>Business_Units</relationshipName>
    <type>Lookup</type>
</CustomField>