unpackaged/main/default/objects/Business_Unit__c/fields/Support_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Support_Entitlement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support Entitlement</label>
    <referenceTo>Entitlement</referenceTo>
    <relationshipLabel>Business Units</relationshipLabel>
    <relationshipName>Business_Units</relationshipName>
    <type>Lookup</type>
</CustomField>