unpackaged/main/default/objects/Business_Unit__c/fields/Support_SLA__c.field-meta.xml
<CustomField>
    <fullName>Support_SLA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support SLA</label>
    <referenceTo>Support_SLA__c</referenceTo>
    <relationshipLabel>Business Units</relationshipLabel>
    <relationshipName>Business_Units</relationshipName>
    <type>Lookup</type>
</CustomField>