unpackaged/main/default/objects/Business_Unit__c/fields/Support_SLA_Priority_Index__c.field-meta.xml
<CustomField>
    <fullName>Support_SLA_Priority_Index__c</fullName>
    <formula>Support_SLA__r.Priority_Index__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Support SLA: Priority Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>