unpackaged/main/default/objects/Business_Unit__c/fields/Time_to_Next_Renewal_days__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Next_Renewal_days__c</fullName>
    <formula>IF(
 BU_Status__c = &quot;Active&quot; &amp;&amp; NOT(ISBLANK(Most_Recent_Base_Opportunity__r.Contract_End_Date__c)),
 Most_Recent_Base_Opportunity__r.Contract_End_Date__c - TODAY(),
 NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time to Next Renewal (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>