unpackaged/main/default/objects/Business_Unit__c/fields/Time_to_Next_Renewal_mo__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Next_Renewal_mo__c</fullName>
    <formula>Time_to_Next_Renewal_days__c / 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time to Next Renewal (mo)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>