unpackaged/main/default/objects/Business_Unit__c/fields/Total_External_Apps__c.field-meta.xml
<CustomField>
    <fullName>Total_External_Apps__c</fullName>
    <label>Total External Apps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>