unpackaged/main/default/objects/Business_Unit__c/fields/Total_External_Users__c.field-meta.xml
<CustomField>
    <fullName>Total_External_Users__c</fullName>
    <label>Total External Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>