unpackaged/main/default/objects/Business_Unit__c/fields/Total_Lifetime_Revenue_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Total_Lifetime_Revenue_Subscription__c</fullName>
    <label>Total Lifetime Revenue (Subscription)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>