unpackaged/main/default/objects/Business_Unit__c/fields/Total_NRR__c.field-meta.xml
<CustomField>
    <fullName>Total_NRR__c</fullName>
    <label>Total NRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>