unpackaged/main/default/objects/Business_Unit__c/fields/Total_Users_End_Users__c.field-meta.xml
<CustomField>
    <fullName>Total_Users_End_Users__c</fullName>
    <label>Total Users (End Users)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>