unpackaged/main/default/objects/Business_Unit__c/fields/Total_Users_Mobile_only__c.field-meta.xml
<CustomField>
    <fullName>Total_Users_Mobile_only__c</fullName>
    <label>Total Users (Mobile-only)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>