unpackaged/main/default/objects/Business_Unit__c/fields/Total_Workflow_Runs__c.field-meta.xml
<CustomField>
    <fullName>Total_Workflow_Runs__c</fullName>
    <label>Total Workflow Runs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>