unpackaged/main/default/objects/Business_Unit__c/fields/Trigger_Flow__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Flow__c</fullName>
    <label>Trigger: Flow</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BU_Deprovision_Automations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>