unpackaged/main/default/objects/Business_Unit__c/fields/Uploaded_to_Netsuite_At__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_to_Netsuite_At__c</fullName>
    <label>Uploaded to Netsuite At</label>
    <type>DateTime</type>
</CustomField>