unpackaged/main/default/objects/Business_Unit__c/fields/Usage_Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Usage_Billing_Frequency__c</fullName>
    <label>Usage: Billing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-annual</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>