unpackaged/main/default/objects/Business_Unit__c/fields/Usage_Billing_Model__c.field-meta.xml
<CustomField>
    <fullName>Usage_Billing_Model__c</fullName>
    <label>Usage: Billing Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Usage_Billing_Models</valueSetName>
    </valueSet>
</CustomField>