unpackaged/main/default/objects/Business_Unit__c/fields/Utilization_Mobile_Only_Users__c.field-meta.xml
<CustomField>
    <fullName>Utilization_Mobile_Only_Users__c</fullName>
    <formula>IF(
Platform_Seats_Unlimited__c = TRUE,
1,
IF(
ISBLANK(Total_Users_Mobile_only__c) || Total_Users_Mobile_only__c = 0,
NULL,
Current_MAU_Mobile_only__c / Total_Users_Mobile_only__c
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Utilization (Mobile Only Users)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>