unpackaged/main/default/objects/Business_Unit__c/fields/Workflows_Is_Paid__c.field-meta.xml
<CustomField>
    <fullName>Workflows_Is_Paid__c</fullName>
    <formula>ARR_Workflows__c &gt; 0 &amp;&amp; INCLUDES(Solution_Set__c, &quot;Workflows&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Workflows: Is Paid?</label>
    <type>Checkbox</type>
</CustomField>