unpackaged/main/default/objects/Business_Unit__c/recordTypes/Committed.recordType-meta.xml
<RecordType>
    <fullName>Committed</fullName>
    <active>true</active>
    <label>Committed</label>
</RecordType>